@@ -13,6 +13,7 @@ import stackpot.stackpot.converter.UserConverter;
 import stackpot.stackpot.converter.UserMypageConverter;
 import stackpot.stackpot.domain.Feed;
 import stackpot.stackpot.domain.Pot;
+import stackpot.stackpot.domain.Taskboard;
 import stackpot.stackpot.domain.User;
 import stackpot.stackpot.domain.enums.Role;
 import stackpot.stackpot.domain.mapping.PotMember;
@@ -21,13 +22,16 @@ import stackpot.stackpot.repository.BadgeRepository.PotMemberBadgeRepository;
 import stackpot.stackpot.repository.BadgeRepository.UserTodoRepository;
 import stackpot.stackpot.repository.FeedRepository.FeedRepository;
 import stackpot.stackpot.repository.PotApplicationRepository.PotApplicationRepository;
+import stackpot.stackpot.repository.PotRepository.PotRecruitmentDetailsRepository;
 import stackpot.stackpot.repository.PotRepository.PotRepository;
 import stackpot.stackpot.repository.UserRepository.UserRepository;
+import stackpot.stackpot.service.EmailService.EmailService;
 import stackpot.stackpot.web.dto.*;
 
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -43,6 +47,7 @@ public class UserCommandServiceImpl implements UserCommandService {
     private final UserTodoRepository userTodoRepository;
     private final TaskRepository taskRepository;
     private final TaskboardRepository taskboardRepository;
+    private final PotRecruitmentDetailsRepository potRecruitmentDetailsRepository;
     private final PotMemberBadgeRepository potMemberBadgeRepository;
 
     private final UserMypageConverter userMypageConverter;
@@ -50,6 +55,8 @@ public class UserCommandServiceImpl implements UserCommandService {
     private final JwtTokenProvider jwtTokenProvider;
     private final RefreshTokenRepository refreshTokenRepository;
     private final BlacklistRepository blacklistRepository;
+
+    private final EmailService emailService;
 
     @Override
     @Transactional
@@ -150,6 +157,10 @@ public class UserCommandServiceImpl implements UserCommandService {
         User user = userRepository.findByEmail(email)
                 .orElseThrow(() -> new MemberHandler(ErrorStatus.MEMBER_NOT_FOUND));
 
+        if(user.getRole() == Role.UNKNOWN){
+            throw new MemberHandler(ErrorStatus.MEMBER_NOT_FOUND);
+        }
+
         // User 정보를 UserResponseDto로 변환
         return UserConverter.toDto(user);
     }
@@ -158,6 +169,10 @@ public class UserCommandServiceImpl implements UserCommandService {
     public UserResponseDto.Userdto getUsers(Long UserId) {
         User user = userRepository.findById(UserId)
                 .orElseThrow(() -> new MemberHandler(ErrorStatus.MEMBER_NOT_FOUND));
+
+        if(user.getRole() == Role.UNKNOWN){
+            throw new MemberHandler(ErrorStatus.MEMBER_NOT_FOUND);
+        }
 
         return UserConverter.toDto(user);
     }
@@ -169,6 +184,10 @@ public class UserCommandServiceImpl implements UserCommandService {
 
         User user = userRepository.findByEmail(email)
                 .orElseThrow(() -> new MemberHandler(ErrorStatus.MEMBER_NOT_FOUND));
+
+        if(user.getRole() == Role.UNKNOWN){
+            throw new MemberHandler(ErrorStatus.MEMBER_NOT_FOUND);
+        }
 
         return getMypageByUser(user.getId(), dataType);
     }
@@ -183,6 +202,10 @@ public class UserCommandServiceImpl implements UserCommandService {
 
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new MemberHandler(ErrorStatus.MEMBER_NOT_FOUND));
+
+        if(user.getRole() == Role.UNKNOWN){
+            throw new MemberHandler(ErrorStatus.MEMBER_NOT_FOUND);
+        }
 
         if (dataType == null || dataType.isBlank()) {
             completedPots = potRepository.findByUserIdAndPotStatus(userId, "COMPLETED");
@@ -290,64 +313,173 @@ public class UserCommandServiceImpl implements UserCommandService {
     }
 
     @Transactional
-    public String deleteUser(String accessToken, String refreshToken) {
+    public String deleteUser(String accessToken) {
+        // 1. 토큰 검증 및 사용자 조회
         String token = accessToken.replace("Bearer ", "");
         String email = jwtTokenProvider.getEmailFromToken(token);
-
         User user = userRepository.findByEmail(email)
-                .orElseThrow( ()-> new IllegalArgumentException(("사용자를 찾을 수 없습니다.")));
-
-
-        try {
-            // refreshToken 삭제 (존재하지 않아도 예외를 던지지 않도록 함)
-            refreshTokenRepository.deleteToken(refreshToken);
-        } catch (Exception e) {
-            throw new RuntimeException("로그아웃 실패: Refresh Token 삭제 중 오류 발생", e);
-        }
-        long expiration = jwtTokenProvider.getExpiration(token);
+                .orElseThrow(() -> new IllegalArgumentException("사용자를 찾을 수 없습니다."));
 
         try {
-            // 블랙리스트에 추가
-            blacklistRepository.addToBlacklist(accessToken, expiration);
+            // 2. 토큰 블랙리스트 처리
+            blacklistRepository.addToBlacklist(token, jwtTokenProvider.getExpiration(token));
+
+            // 3. Feed 관련 데이터 삭제
+            deleteFeedRelatedData(user.getId());
+
+            // 4. Todo 데이터 삭제
+            userTodoRepository.deleteByUserId(user.getId());
+
+            // 5. Task 및 Taskboard 관련 데이터 삭제
+            deleteTaskRelatedData(user.getId());
+
+            // 6. Pot 관련 데이터 삭제
+            boolean isCreator = potRepository.existsByUserId(user.getId());
+            if (isCreator) {
+                handleCreatorPotDeletion(user);
+            } else {
+                handleNormalUserPotDeletion(user);
+            }
+
+            return "회원 탈퇴가 완료되었습니다.";
+
         } catch (Exception e) {
-            throw new RuntimeException("로그아웃 실패: 토큰 블랙리스트 등록 중 오류 발생", e);
+            log.error("회원 탈퇴 중 오류 발생: {}", e.getMessage(), e);
+            throw new RuntimeException("회원 탈퇴 처리 중 오류가 발생했습니다.", e);
         }
+    }
 
-        boolean isCreator = potRepository.existsByUserId(user.getId());
+    private void deleteFeedRelatedData(Long userId) {
+        // Feed 좋아요 삭제
+        feedLikeRepository.deleteByUserId(userId);
 
+        // Feed 삭제
+        feedRepository.deleteByUserId(userId);
+    }
 
-        //potMember, taskborad지우기
-        List<PotMember> potMembers = potMemberRepository.findByuserId(user.getId());
+    private void deleteTaskRelatedData(Long userId) {
+        // PotMember 관련 데이터 조회
+        List<PotMember> potMembers = potMemberRepository.findByuserId(userId);
         List<Long> potMemberIds = potMembers.stream()
                 .map(PotMember::getPotMemberId)
-                .toList();
+                .collect(Collectors.toList());
 
-        potMemberBadgeRepository.deleteByPotMemberIds(potMemberIds);
-        taskRepository.deleteByPotMemberIds(potMemberIds);
+        // Badge 데이터 삭제
+        if (!potMemberIds.isEmpty()) {
+            potMemberBadgeRepository.deleteByPotMemberIds(potMemberIds);
+        }
 
-        taskboardRepository.deleteByUserId(user.getId());
+        // Taskboard 및 Task 삭제
+        // 탈퇴하는 유자가 taskboard 생성자
+        List<Taskboard> taskboards = taskboardRepository.findByUserId(userId);
+        if (!taskboards.isEmpty()) {
+            List<Long> taskboardIds = taskboards.stream()
+                    .map(Taskboard::getTaskboardId)
+                    .collect(Collectors.toList());
 
-        //feed 지우기
-        feedLikeRepository.deleteByUserId(user.getId());
-        feedRepository.deleteByUserId(user.getId());
+            taskRepository.deleteByTaskboardIds(taskboardIds);
+            taskboardRepository.deleteAll(taskboards);
+        }
 
-        userTodoRepository.deleteByUserId(user.getId());
+        // Task 삭제 (PotMember 관련)
+        if (!potMemberIds.isEmpty()) {
+            taskRepository.deleteByPotMemberIds(potMemberIds);
+        }
+    }
 
-        potApplicationRepository.deleteByUserId(user.getId());
+    private void handleCreatorPotDeletion(User user) {
+        List<Pot> userPots = potRepository.findByUserId(user.getId());
 
-
-        if(isCreator){
-            user.deleteUser();
-            for (PotMember potMember : potMembers) {
+        for (Pot pot : userPots) {
+            if (pot.getPotStatus().equals("COMPLETED")) {
+                // 완료된 Pot의 경우 PotMember만 소프트 딜리트
+                PotMember potMember = potMemberRepository.findByPotIdAndUserId(pot.getPotId(), user.getId());
                 potMember.deletePotMember();
+                potMemberRepository.save(potMember);
+            } else {
+                // 진행 중인 Pot 처리
+                deletePotAndRelatedData(pot);
             }
-            userRepository.save(user);
         }
-        else{
-            potMemberRepository.deleteByUserId(user.getId());
-            userRepository.delete(user);
+
+        user.deleteUser();  // 소프트 딜리트
+        userRepository.save(user);
+    }
+
+    @Transactional
+    private void deletePotAndRelatedData(Pot pot) {
+        log.info("Pot {} 삭제 시작", pot.getPotId());
+
+        // 1. PotMember 조회 및 ID 추출
+        List<PotMember> potMembers = potMemberRepository.findByPotId(pot.getPotId());
+        List<Long> potMemberIds = potMembers.stream()
+                .map(PotMember::getPotMemberId)
+                .collect(Collectors.toList());
+
+        log.info("삭제할 PotMember 수: {}", potMembers.size());
+
+        if (pot.getPotStatus().equals("ONGOING")) {
+            sendDeletionNotifications(potMembers, pot);
         }
-        return null;
+
+        try {
+            // 2. Todo 삭제
+            userTodoRepository.deleteByPotId(pot.getPotId());
+
+            // 3. Task 관련 데이터 삭제
+            if (!potMemberIds.isEmpty()) {
+                taskRepository.deleteByPotMemberIds(potMemberIds);
+                potMemberBadgeRepository.deleteByPotMemberIds(potMemberIds);
+            }
+
+            // 4. Taskboard 삭제
+            taskboardRepository.deleteByPotId(pot.getPotId());
+
+            // 5. 각 PotMember의 application 참조 제거
+            potMemberRepository.clearApplicationReferences(pot.getPotId());
+            log.info("PotMember의 application 참조 제거 완료");
+
+            // 6. PotMember 삭제
+            potMemberRepository.deleteByPotId(pot.getPotId());
+            log.info("PotMember 삭제 완료");
+
+            // 7. PotApplication 삭제
+            potApplicationRepository.deleteByPotId(pot.getPotId());
+            log.info("PotApplication 삭제 완료");
+
+            potRecruitmentDetailsRepository.deleteByPot_PotId(pot.getPotId());
+            log.info("PotRecruitmentDetails 삭제 완료");
+
+            // 8. Pot 삭제
+            potRepository.delete(pot);
+            log.info("Pot {} 삭제 완료", pot.getPotId());
+
+        } catch (Exception e) {
+            log.error("Pot {} 삭제 중 오류 발생: {}", pot.getPotId(), e.getMessage());
+            throw new RuntimeException("Pot 및 관련 데이터 삭제 중 오류 발생", e);
+        }
+    }
+
+    private void sendDeletionNotifications(List<PotMember> potMembers, Pot pot) {
+        potMembers.forEach(potMember -> {
+            try {
+                emailService.sendPotDeleteNotification(
+                        potMember.getUser().getEmail(),
+                        pot.getPotName(),
+                        potMember.getUser().getNickname() +
+                                getVegetableNameByRole(potMember.getRoleName().name())
+                );
+            } catch (Exception e) {
+                log.error("이메일 발송 실패: {}", e.getMessage());
+                // 이메일 발송 실패는 전체 프로세스를 중단하지 않음
+            }
+        });
+    }
+
+    private void handleNormalUserPotDeletion(User user) {
+        potMemberRepository.deleteByUserId(user.getId());
+        potApplicationRepository.deleteByUserId(user.getId());
+        userRepository.delete(user);
     }
 
     @Override
@@ -388,7 +520,8 @@ public class UserCommandServiceImpl implements UserCommandService {
                 "BACKEND", " 양파",
                 "FRONTEND", " 버섯",
                 "DESIGN", " 브로콜리",
-                "PLANNING", " 당근"
+                "PLANNING", " 당근",
+                "UNKNOWN",""
         );
         return roleToVegetableMap.getOrDefault(role, "알 수 없음");
     }
